src/css/style.css
@charset "utf-8";

html{
    font-family:"poppins", "inter", sans-serif;
}



body {
	background-color: #275;
	color: #fff;
	justify-content: center;
	align-items: center;
	position: relative;
}

.container {
    width: min(100% - 30px, 1200px);
    margin-inline: auto;
}

.hit-btn, .hold-btn {
	display: none;
	opacity: 0;
}

.hidden {
	display: none; 
	opacity: 0;
}

.visible {
	display: inline-block;
	opacity: 1;
}

h1 {
	font-size: 2.5rem;
}

p {
	text-align: center;
	font-size: 1.5rem;
	margin: 15px 0;
}



.f-col {
    flex-direction: column;
}

.flex {
	display: flex;
}

aside {
	border: solid 1px #012;
	position: fixed;
	left: 10px;

	p {
		height: 25px;
		line-height: 25px;
		background-color: rgb(64 64 64 / 0.2);
	}
}

.dealer-image-wrapper {
  display: grid;
  position: relative; 
  grid-template-columns: 1fr; 
  grid-template-rows: auto; 
  width: 15svw; 
  height: 10svh; 
	background-color: #def;
	border: solid 2px #212;
	border-radius: 25px;

	img {
		height: 9svh;
		width: auto;
	}
}

.player-image-wrapper {
  display: grid;
  position: relative; 
  grid-template-columns: 1fr; 
  grid-template-rows: auto; 
  width: 30svw; 
  height: 25svh; 
	padding:30px; 
	background-color: #f3f;
	border: solid 2px #212;
	border-radius: 25px;

	img {
		height: 20svh;
		width: auto;
	}
}

.player-image-wrapper > * {
  position: absolute; 
  top:15px; 
  left: 15px; 
  right: 0;
  bottom: 0;
  z-index: 1; 
  transition: transform 0.3s ease-in-out; 
}

.player-image-wrapper > *:nth-child(1) {
  z-index: 1;
}

.player-image-wrapper > *:nth-child(2) {
  z-index: 2; 
  transform: translateX(25%); 
}

.player-image-wrapper > *:nth-child(3) {
  z-index: 3; 
  transform: translateX(50%); 
}

.player-image-wrapper > *:nth-child(4) {
  z-index: 4; 
  transform: translateX(75%); 
}

.player-image-wrapper > *:nth-child(4) {
  z-index: 5; 
  transform: translateX(100%); 
}
	/* --	I THINK	-- */

button {
    width: 100px; 
		height: 100px;
    font-size: 1.5rem;
    font-weight: 400;
    background-color: #8a9;
    color: #fff;
    border-radius: 50%;
}

.round-button {
  position: relative;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  border: 2px solid #007BFF; /* Button border color */
}

.half {
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  cursor: pointer;
}

.half.up {
  background-color: #007BFF; /* Top half color */
  color: white;
}

.half.down {
  background-color: #0056b3; /* Bottom half color */
  color: white;
}

.half.up::before,
.half.down::before {
  font-size: 16px;
}

.half.up::before {
  content: "▲"; /* Up arrow */
}

.half.down::before {
  content: "▼"; /* Down arrow */
}

.half:hover {
  filter: brightness(1.2); /* Highlight on hover */
}

